Change Base64 implementation