@@ -4,12 +4,12 @@
  */
 package de.juehvtech.yayu.util.encryption;
 
-import com.sun.org.apache.xerces.internal.impl.dv.util.Base64;
 import java.nio.ByteBuffer;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
+import javax.xml.bind.DatatypeConverter;
 
 /**
  *
@@ -31,7 +31,7 @@ public class TextEncrypter {
 
     public static String encryptBase64(char[] text) throws Exception {
         byte[] crypt = TextEncrypter.encrypt(text);
-        return Base64.encode(crypt);
+        return DatatypeConverter.printBase64Binary(crypt);
     }
 
     public static String encryptBase64IgnoreError(char[] text) {
